Delete trailer on content deleted in Arrs (#414)
* core: delete trailers when media is removed.

* made updates per guidelines to submit the pull request

* UPD: Split setting into 2 settings and refactored

* UPD: remove `media_exists` attr from MediaReadDC class

* UPD: Docs to include contribution by @lems111

* UPD: align trailer cleanup with new flags.

* UPD: Refactor as discussed

* UPD: Layout and some colors

---------
